fixed sub-project spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,7 @@ header nav ul {
 }
 
 .project-text {
-  padding-left: 13px;
+  padding-left: 25px;
 }
 
 .sub-project img {
